# rustfast

./: Cargo.toml  README.me  cnt.py  x.txt
data/: cnt.json
src/: lib.rs  main.rs
