[package]
name = "rustfast"
version = "0.1.1"
authors = ["GaoangLau <byteleap@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.8.4"
clap = "2.33.3"
reqwest = {version = "0.11.4", features = ["blocking", "json"] }

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true